samples/_failures_safe/1761042446_bed68c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e2d49da.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_5e2d49da.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("BFS traversal: ");
      |     ^~~~~~
